--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StarWars.com | The Official Star Wars Website</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
@@ -21,8 +21,8 @@
                 <span id="soc_med_nav_divider"></span>
                 <a href="#" id = "kids_icon">KIDS</a>
             </div>
-            <a id="self_link" href="./starWarsLayout.html">
-                <img id = "swlogo" src="../assets/sw_logo_stacked-336c62367939.png" alt="Star_Wars_logo_black">
+            <a id="self_link" href="/assets/starWarsLayout.html">
+                <img id = "swlogo" src="/assets/sw_logo_stacked-336c62367939.png" alt="Star_Wars_logo_black">
             </a>
             <div id = search_login> <h1> Spacer </h1></div>
         </div>
@@ -46,7 +46,7 @@
     </div>
     <a id = "to_disney" href = "#">
         <p id = "disney_link">STAR WARS STREAMING ANYTIME ON </p>
-        <img id = "disney_plus_logo" src="../assets/d_grey_600f51ed.svg" alt="disney plus logo">
+        <img id = "disney_plus_logo" src="/assets/d_grey_600f51ed.svg" alt="disney plus logo">
     </a>
     <div id = "mando">
     </div>
