will my images work?

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <span id="soc_med_nav_divider"></span>
                 <a href="#" id = "kids_icon">KIDS</a>
             </div>
-            <a id="self_link" href="assets/starWarsLayout.html">
-                <img id = "swlogo" src="assets/sw_logo_stacked-336c62367939.png" alt="Star_Wars_logo_black">
+            <a id="self_link" href="starWarsLayout.html">
+                <img id = "swlogo" src="./assets/sw_logo_stacked-336c62367939.png" alt="Star_Wars_logo_black">
             </a>
             <div id = search_login> <h1> Spacer </h1></div>
         </div>
@@ -46,12 +46,12 @@
     </div>
     <a id = "to_disney" href = "#">
         <p id = "disney_link">STAR WARS STREAMING ANYTIME ON </p>
-        <img id = "disney_plus_logo" src="assets/d_grey_600f51ed.svg" alt="disney plus logo">
+        <img id = "disney_plus_logo" src="./assets/d_grey_600f51ed.svg" alt="disney plus logo">
     </a>
     <div id = "mando">
     </div>
     <div id = "heiress">
-        <!-- <img id = "heiress-back-image" src="assets/chapter-11-the-mandalorian-single-hero-desktop_da2b0416.jpg" alt="chapter-11-the-mandalorian-single-hero-desktop_da2b0416"> -->
+        <!-- <img id = "heiress-back-image" src="./assets/chapter-11-the-mandalorian-single-hero-desktop_da2b0416.jpg" alt="chapter-11-the-mandalorian-single-hero-desktop_da2b0416"> -->
     </div>
 
 </body>
