Repaired to right nav area

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- Gonna  need to add 1) Bottom nav 2) logo right search bar, login, signup 3) logo left icon links-->
         <div id="header_top">
             <div id = "soc_med_nav"> 
-                <a href="#" class="fa fa-facebook"></a> 
+                <a href="#" class="fa fa-facebook"></a>
                 <a href="#" class="fa fa-instagram"></a>
                 <a href="#" class="fa fa-tumblr"></a>
                 <a href="#" class="fa fa-twitter"></a>
@@ -24,7 +24,20 @@
             <a id="self_link" href="starWarsLayout.html">
                 <img id = "swlogo" src="./assets/sw_logo_stacked-336c62367939.png" alt="Star_Wars_logo_black">
             </a>
-            <div id = search_login> <h1> Spacer </h1></div>
+            <div id = search_login> 
+                <div id="search_bar_div">
+                    <input type="search" placeholder="Search Star Wars" id="search_bar">
+                    <button type="submit"><i class="fa fa-search"></i></button>
+                </div>
+                <div id="login_signup">
+                    <p>
+                        <a href="#" class="nav_link">LOG IN</a>
+                        //
+                        <a href="#" class="nav_link">SIGN UP</a>
+                    </p>
+                </div>
+            
+            </div>
         </div>
         
         <nav id = "navbar">
