work on mando and heiress content

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <span id="soc_med_nav_divider"></span>
                 <a href="#" id = "kids_icon">KIDS</a>
             </div>
-            <a id="self_link" href="starWarsLayout.html">
+            <a id="self_link" href="index.html">
                 <img id = "swlogo" src="./assets/sw_logo_stacked-336c62367939.png" alt="Star_Wars_logo_black">
             </a>
             <div id = search_login> 
@@ -62,9 +62,25 @@
         <img id = "disney_plus_logo" src="./assets/d_grey_600f51ed.svg" alt="disney plus logo">
     </a>
     <div id = "mando">
+        <div id="mando-hook">
+            <img id="mando_now_streaming" src="./assets/mando-logotitle-white-nowstreaming_b30c09b2.png" alt="">
+            <p id="mando_blurb">Start streaming "Chapter 11: The Heiress," exclusively on Disney+!</p>
+            <div id="mando-hook-buttons">
+                <button></button>
+                <button></button>
+            </div>
+        </div>
+
+        <div id="mando_buttons">
+            <button type="submit" class="mando_button" id="mb1">THE LEGO STAR WARS HOLIDAY SPECIAL</button>
+            <button class="mando_button" id="mb2">THE MANDALORIAN SEASON 2</button>
+            <button class="mando_button" id="mb3"> OUR STAR WARS STORIES</button>
+            <button class="mando_button" id="mb4">MANDO MONDAYS ARE HERE!</button>
+        </div>
     </div>
     <div id = "heiress">
         <!-- <img id = "heiress-back-image" src="./assets/chapter-11-the-mandalorian-single-hero-desktop_da2b0416.jpg" alt="chapter-11-the-mandalorian-single-hero-desktop_da2b0416"> -->
+        <img id="heiress_logo" src="./assets/chapter-11-mando-logotitle-all-_1_f8663d0a.webp" alt="chapter-11-mando-logotitle-all-_1_f8663d0a">
     </div>
 
 </body>
