finished static layout

--- a/index.html
+++ b/index.html
@@ -65,22 +65,29 @@
         <div id="mando-hook">
             <img id="mando_now_streaming" src="./assets/mando-logotitle-white-nowstreaming_b30c09b2.png" alt="">
             <p id="mando_blurb">Start streaming "Chapter 11: The Heiress," exclusively on Disney+!</p>
-            <div id="mando-hook-buttons">
-                <button></button>
-                <button></button>
+            <div id="mando_hook_buttons">
+                <a href="#" class="hb" id="md_hook_b1">STREAM NOW</a>
+                <a href="#" class="hb" id="md_hook_b2">EXPLORE</a>
             </div>
         </div>
 
         <div id="mando_buttons">
-            <button type="submit" class="mando_button" id="mb1">THE LEGO STAR WARS HOLIDAY SPECIAL</button>
+            <button class="mando_button" id="mb1">THE LEGO STAR WARS HOLIDAY SPECIAL</button>
             <button class="mando_button" id="mb2">THE MANDALORIAN SEASON 2</button>
             <button class="mando_button" id="mb3"> OUR STAR WARS STORIES</button>
             <button class="mando_button" id="mb4">MANDO MONDAYS ARE HERE!</button>
         </div>
     </div>
     <div id = "heiress">
+        <div id="heiress_hook">
         <!-- <img id = "heiress-back-image" src="./assets/chapter-11-the-mandalorian-single-hero-desktop_da2b0416.jpg" alt="chapter-11-the-mandalorian-single-hero-desktop_da2b0416"> -->
-        <img id="heiress_logo" src="./assets/chapter-11-mando-logotitle-all-_1_f8663d0a.webp" alt="chapter-11-mando-logotitle-all-_1_f8663d0a">
+            <img id="heiress_logo" src="./assets/chapter-11-mando-logotitle-all-_1_f8663d0a.webp" alt="chapter-11-mando-logotitle-all-_1_f8663d0a">
+            <p id="heiress_blurb">The Mandalorian braves high seas and meets unexpected allies.</p>
+            <div id="heiress_hook_buttons">
+                <a href="#" class="hb" id="h_hook_b1">STREAM NOW</a>
+                <a href="#" class="hb" id="h_hook_b2">EPISODE GUIDE</a>
+            </div>
+        </div>
     </div>
 
 </body>
